--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Inicio</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <h1>Hola Mundo!</h1>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
